objects/Referral_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Opportunity this record is related to</description>
        <inlineHelpText>Opportunity this record is related to</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Proferral_Payout_Date__c</fullName>
        <description>Proferral Payout Date</description>
        <inlineHelpText>Proferral Payout Date</inlineHelpText>
        <label>Proferral Payout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proferral_Referee_Payout_Amount__c</fullName>
        <description>Proferral Referee Payout Amount</description>
        <inlineHelpText>Proferral Referee Payout Amount</inlineHelpText>
        <label>Proferral Referee Payout Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proferral_Referrer_Payout_Amount__c</fullName>
        <description>Proferral Referrer Payout Amount</description>
        <inlineHelpText>Proferral Referrer Payout Amount</inlineHelpText>
        <label>Proferral Referrer Payout Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proferral_Referrer_Payout_Notes__c</fullName>
        <description>Proferral Referrer Payout Amount</description>
        <inlineHelpText>Proferral Referrer Payout Amount</inlineHelpText>
        <label>Proferral Referrer Payout Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referee_s_Name__c</fullName>
        <description>Name of the person who was referred to ProService</description>
        <inlineHelpText>Name of the person who was referred to ProService</inlineHelpText>
        <label>Referee's Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by_Client_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Referred by Client/Partner</description>
        <inlineHelpText>Referred by Client/Partner</inlineHelpText>
        <label>Referred by Client/Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by_Department__c</fullName>
        <description>Department the employee belongs to that referred the Organization</description>
        <inlineHelpText>Department the employee belongs to that referred the Organization</inlineHelpText>
        <label>Referred by Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Client HR</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Front Office</fullName>
                </value>
                <value>
                    <fullName>HR Associates</fullName>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
                <value>
                    <fullName>Internal Audit Team</fullName>
                </value>
                <value>
                    <fullName>Internal HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Pricing &amp; Analytics</fullName>
                </value>
                <value>
                    <fullName>Risk Control</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Operations</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_by_EE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Referred by internal EE</description>
        <inlineHelpText>Referred by internal EE</inlineHelpText>
        <label>Referred by EE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referrer_s_Name__c</fullName>
        <description>Name of the person who referred the Organization to ProService</description>
        <inlineHelpText>Name of the person who referred the Organization to ProService</inlineHelpText>
        <label>Referrer's Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSE_Internal_Payout_Amount__c</fullName>
        <description>WSE Internal Payout Amount</description>
        <inlineHelpText>WSE Internal Payout Amount</inlineHelpText>
        <label>WSE Internal Payout Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WSE_Internal_Payout_Date__c</fullName>
        <description>WSE Internal Payout Date</description>
        <inlineHelpText>WSE Internal Payout Date</inlineHelpText>
        <label>WSE Internal Payout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WSE_Internal_Payout_Notes__c</fullName>
        <description>WSE Internal Payout Notes</description>
        <inlineHelpText>WSE Internal Payout Notes</inlineHelpText>
        <label>WSE Internal Payout Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X1st_Meeting_Internal_Notes__c</fullName>
        <description>1st Meeting Internal Notes</description>
        <inlineHelpText>1st Meeting Internal Notes</inlineHelpText>
        <label>1st Meeting Internal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X1st_Meeting_Internal_Payout_Amount__c</fullName>
        <description>1st Meeting Internal Payout Amount</description>
        <inlineHelpText>1st Meeting Internal Payout Amount</inlineHelpText>
        <label>1st Meeting Internal Payout Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Meeting_Internal_Payout_Date__c</fullName>
        <description>1st Meeting Internal Payout Date</description>
        <inlineHelpText>1st Meeting Internal Payout Date</inlineHelpText>
        <label>1st Meeting Internal Payout Date</label>
        <type>Date</type>
    </fields>
    <description>Marketing Referral Tracker</description>
    <label>Referral</label>
    <nameField>
        <displayFormat>Referral-{0}</displayFormat>
        <label>Referral Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>